В popup-correctly задал text-align: center; всему блоку

--- a/source/sass/blocks/page-form/popup-correctly.scss
+++ b/source/sass/blocks/page-form/popup-correctly.scss
@@ -11,6 +11,8 @@
   transform: translateX(-50%);
 
   box-shadow: 0px 10px 10px 0px rgba(40,54,69,0.3);
+
+  text-align: center;
 }
 
 .popup-correctly__wrapper {
@@ -24,14 +26,11 @@
   padding-left: 20px;
 
   box-sizing: border-box;
-
-
 }
 
 .popup-correctly__title {
   margin: 0;
 
-  text-align: center;
   line-height: 24px;
   font-weight: 700;
   font-size: 18px;
@@ -40,8 +39,6 @@
 .popup-correctly__text {
   margin: 0;
   margin-top: 25px;
-
-  text-align: center;
 }
 
 .popup-correctly__wrapper-button {
